# RayTracing

./: CMakeLists.txt  README.md  main.cpp
include/: Blob.h  Camera.h  Image.h  Light.h  Mesh.h  Object.h  Ray.h  Scene.h  TextureMaterial.h  Utils.h  Vector.h
